<resources>
    <string name="app_name">FitnessApp</string>
    <string name="settings">settings</string>
    <string name="calendar">calendar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Calendar">Calendar</string>
    <string name="select_date">select date</string>
    <string name="szenhidratok">szénhidrátok</string>
    <string name="feherje">fehérje</string>
    <string name="zsir">zsír</string>
    <string name="kaloria">kalória</string>
    <string name="taplalkozas">Táplálkozás</string>
    <string name="napi_hatralek">napi hátralék</string>
    <string name="testalkat_rogzitese">Testalkat rögzítése</string>
    <string name="vizmennyiseg_rogzitese">vízmennyiség rögzítése</string>
    <string name="hatralevo_bevitel">hatralevo bevitel</string>
    <string name="edzesterv">edzésterv</string>
    <string name="testmozgas">testmozgás</string>
    <string name="beallitasok">Beállítások</string>
    <string name="profil">Profil</string>
    <string name="ertesitesek">értesítések</string>
    <string name="nyelv">nyelv</string>
    <string name="fiok">fiók</string>
    <string name="cel">Cél :</string>
    <string name="kezd_suly">kezdő súly:</string>
    <string name="jelenlegi_suly">jelenlegi súly:</string>
    <string name="celba_vett_suly">célba vett súly:</string>
    <string name="Etel_lista">Étel lista</string>
    <string name="etel_hozzaadas_az_adatbazishoz">Étel hozzáadás az adatbázishoz</string>
    <string name="enter_food_name">Enter food name</string>
    <string name="enter_calories_in_10dkg">Enter calories in 10dkg</string>
    <string name="enter_fat_amount_in_ten_dkg">Enter fat amount in ten dkg</string>
    <string name="enter_protein_amount_in_ten_dkg">Enter protein amount in ten dkg</string>
    <string name="enter_carbohydrate_amount_in_then_dkg">Enter carbohydrate amount in then dkg</string>
    <string name="save_food_to_database">save food to database</string>
    <string name="kereses">keresés</string>
    <string name="keresendo_sport">keresendő sport</string>
    <string name="enter_sport_name">enter sport name</string>
    <string name="enter_calories_burnt_in_10_minutes">enter calories burnt in 10 minutes</string>
    <string name="kor">kor</string>
    <string name="eletkor">kor:</string>
    <string name="nem">nem</string>
    <string name="magassag">magasság</string>
    <string name="preference_file_key">com.example.fitnessapp.PREFERENCE_FILE_KEY</string>
    <string name="neme">nem:</string>
    <string name="magass_g">magasság:</string>
    <string name="szerkeszt">SZERKESZT</string>
    <string name="c_l_megad_sa">Cél megadása</string>
    <string name="kor_megad_sa">Kor megadása</string>
    <string name="nem_megad_sa">Nem megadása</string>
    <string name="magass_g_megad_sa">Magasság megadása</string>
    <string name="s_ly_megad_sa">Súly megadása</string>
    <string name="ment_s">MENTÉS</string>
    <string name="_10_dkgs">10 dkgs</string>
    <string name="tel_hozz_ad_sa">étel hozzáadása</string>
    <string name="_10_perc">10 perc</string>
    <string name="date">date</string>
    <string name="aktivitas">aktivitás</string>
    <string name="v_z">víz</string>
    <string name="fenykep_keszites">FÉNYKÉP KÉSZités</string>
    <string name="suly">súly:</string>
    <string name="statisztika">STATISZTIKA</string>
    <string name="nap_t_rl_se">nap törlése</string>
    <string name="mai_s_ly">mai súly</string>
</resources>
